# d1-baseball-api

./: .gitignore  .keep-alive  README.md  d1_team_abbreviations.csv  pyproject.toml
.github/workflows/: auto-merge-keep-alive.yml  keep-alive.yml  supabase-keep-alive.yml  supabase-seasondates-check.yml
d1_baseball_api/: database.py  main.py
d1_baseball_api/api/: routes.py
d1_baseball_api/models/: models.py  responses.py  schemas.py
scripts/: cron_job.py  cron_season_dates.py  d1_conferences_scraper.py  d1_season_dates_scraper.py  extract_teams_and_stadiums.py  season_start_end_dates.py
